# DuetWiFiSocketServer

./: .cproject  BuildRelease.sh  CMakeLists.txt  DWSSesp32.code-workspace  Makefile  README.md  buildesp32.cmd  esp32_partitions.csv  flash.cmd  makefileesp32.mk  sdkconfig  sdkconfig.ci
components/arduino/: CMakeLists.txt
components/arduino/libraries/EEPROM/src/: EEPROM.cpp  EEPROM.h
components/arduino/libraries/WiFi/src/: WiFiGeneric.cpp  WiFiSTA.cpp  WiFiSTA.h
main/: CMakeLists.txt  Config.h  Connection.cpp  HSPI.cpp  Listener.cpp  SocketServer.cpp
src/: CMakeLists.txt  Config.h  Connection.cpp  Connection.h  HSPI.cpp  HSPI.h  Listener.cpp  Listener.h  SocketServer.cpp
src/include/: MessageFormats.h
src/ld/: local.eagle.app.v6.common.ld
